--- a/tex/DD2424_project.tex
+++ b/tex/DD2424_project.tex
@@ -76,52 +76,66 @@
 \subsection*{Backward pass}
 	In order to find the analytical gradients and compute the backward pass, we employ the chain rule. First, we consider the gradient of the cross-entropy loss w.r.t. the output for the final time step. We define 
 	$$\frac{\partial L}{\partial \bm{o}_t} = -(\bm{y}_t - \bm{p}_t)^T, \quad \forall\, t = 1, 2, \dots, T$$
-	and denote $\bm{g}_t := \frac{\partial L}{\partial \bm{o}_t}$. Then, in order to compute the gradients of the individual weights, we need to first find define the gradients with respect to the hidden activation, the gates and the memory cell. Hence, we  first consider the partial derivative of the loss with respect to the hidden units, i.e. $h_t$ for $t = 1, 2, \dots, T$, and consider two cases: $t= T$ and $t = 1, 2, \dots, T-1$. 
+	and denote $\bm{g}_t := \frac{\partial L}{\partial \bm{o}_t}$. Then, in order to compute the gradients of the individual weights, we need to first find define the gradients with respect to the hidden activation and the memory cell as these have to be computed through time. Hence, we  first consider the partial derivative of the loss with respect to the hidden units and the memory cell, i.e. $h_t$ and $c_t$ for $t = 1, 2, \dots, T$, and consider two cases: $t= T$ and $t = 1, 2, \dots, T-1$. 
 
 \subsubsection*{I - the case of $t = T$}
-	For this case, the gradient computation is straightforward by employing the chain rule. Specifically, we have that
+	For this case, the gradient computation is straightforward by employing the chain rule. Specifically, for the hidden unit we have that
 	$$\frac{\partial L}{\partial \bm{h}_t} = \frac{\partial L}{\partial \bm{o}_t} \frac{\partial\bm{o}_t}{\partial \bm{h}_t} = \bm{g}_t V$$ 
+	and for the memory cell we simply get
+	$$\frac{\partial L}{\partial \bm{c}_t} = \frac{\partial L}{\partial \bm{o}_t} \frac{\partial\bm{o}_t}{\partial \bm{h}_t} \frac{\partial\bm{h}_t}{\partial \bm{c}_t} = \bm{g}_t V \bm{e}_t (1 - \tanh^2(\bm{c}_t))$$
 
 \subsubsection*{II - the case of $t < T$}
-	In order to perform the backward pass for earlier time steps in the sequence, we need to consider how the information propagates forward, i.e. the hidden unit at $t-1$ passes through the hidden unit at $t$, and since the hidden unit at $t$ accounts for the input, output and exposure gates, we have that
-	\begin{align*}
-		\frac{\partial L}{\partial \bm{h}_t} &= \bm{g}_t V + \frac{\partial L}{\partial \bm{i}_{t+1}}\frac{\partial \bm{i}_{t+1}}{\partial \bm{h}_t} + \frac{\partial L}{\partial \bm{f}_{t+1}}\frac{\partial \bm{f}_{t+1}}{\partial \bm{h}_t}  + \frac{\partial L}{\partial \bm{e}_{t+1}}\frac{\partial \bm{e}_{t+1}}{\partial \bm{h}_t} + \frac{\partial L}{\partial \tilde{\bm{c}}_{t+1}}\frac{\partial \tilde{\bm{c}}_{t+1}}{\partial \bm{h}_t}\\
-		&= \bm{g}_t V  + \frac{\partial L}{\partial \bm{i}_{t+1}} \frac{\partial \bm{i}_{t+1}}{\partial \bm{a}_{i, t+1}} W_i + \frac{\partial L}{\partial \bm{f}_{t+1}}  \frac{\partial \bm{f}_{t+1}}{\partial \bm{a}_{f, t+1}}W_f  + \frac{\partial L}{\partial \bm{e}_{t+1}}  \frac{\partial \bm{e}_{t+1}}{\partial \bm{a}_{e t+1}}W_e + \frac{\partial L}{\partial \tilde{\bm{c}}_{t+1}}  \frac{\partial \tilde{\bm{c}}_{t+1}}{\partial \bm{a}_{c, t+1}}W_c
-	\end{align*}
-	where $\bm{a}_{, t}$ denote the activations at time $t$, e.g.
+	In order to perform the backward pass for earlier time steps in the sequence, we need to consider how the information propagates forward, i.e. the hidden unit at $t-1$ passes through the hidden unit at $t$. Similarly, the memory cell at $t-1$ passes through the memory cell at $t$. For notational convenience, we define the activations for the gates as $\bm{a}_{., t}$, i.e. such that e.g.  
 	$$\bm{i}_t := \sigma(\bm{a}_{i, t})$$ 
+	Hence, for the hidden units and the memory cell, we have that
+	\begin{align*}
+		\frac{\partial L}{\partial \bm{h}_t} &= \frac{\partial L}{\partial \bm{o}_t} \frac{\partial\bm{o}_t}{\partial \bm{h}_t} + \frac{\partial L}{\partial \bm{o}_{t+1}} \frac{\partial\bm{o}_{t+1}}{\partial \bm{h}_t}\\
+		&= \bm{g}_t V + \frac{\partial L}{\partial \bm{i}_{t+1}}\frac{\partial \bm{i}_{t+1}}{\partial \bm{h}_t} + \frac{\partial L}{\partial \bm{f}_{t+1}}\frac{\partial \bm{f}_{t+1}}{\partial \bm{h}_t}  + \frac{\partial L}{\partial \bm{e}_{t+1}}\frac{\partial \bm{e}_{t+1}}{\partial \bm{h}_t} + \frac{\partial L}{\partial \tilde{\bm{c}}_{t+1}}\frac{\partial \tilde{\bm{c}}_{t+1}}{\partial \bm{h}_t}\\
+		&= \bm{g}_t V  + \frac{\partial L}{\partial \bm{i}_{t+1}} \frac{\partial \bm{i}_{t+1}}{\partial \bm{a}_{i, t+1}} W_i + \frac{\partial L}{\partial \bm{f}_{t+1}}  \frac{\partial \bm{f}_{t+1}}{\partial \bm{a}_{f, t+1}}W_f  + \frac{\partial L}{\partial \bm{e}_{t+1}}  \frac{\partial \bm{e}_{t+1}}{\partial \bm{a}_{e t+1}}W_e + \frac{\partial L}{\partial \tilde{\bm{c}}_{t+1}}  \frac{\partial \tilde{\bm{c}}_{t+1}}{\partial \bm{a}_{c, t+1}}W_c\\
+	\\
+	\frac{\partial L}{\partial \bm{c}_t} &= \frac{\partial L}{\partial \bm{o}_t} \frac{\partial\bm{o}_t}{\partial \bm{h}_t} \frac{\partial\bm{h}_t}{\partial \bm{c}_t} + \frac{\partial L}{\partial \bm{o}_{t+1}} \frac{\partial\bm{o}_{t+1}}{\partial \bm{h}_{t+1}} \frac{\partial\bm{h}_{t+1}}{\partial \bm{c}_{t+1}} \frac{\partial\bm{c}_{t+1}}{\partial \bm{c}_{t}}\\
+	&= \bm{g}_t V \bm{e}_t(1 - \tanh^2(\bm{c}_t)) + \frac{\partial L}{\partial \bm{c}_{t+1}}\frac{\partial\bm{c}_{t+1}}{\partial \bm{c}_{t}} \\
+	&= \bm{g}_t V \bm{e}_t(1 - \tanh^2(\bm{c}_t)) + \frac{\partial L}{\partial \bm{c}_{t+1}} \bm{f}_{t+1}
+	\end{align*}
+	Then, in order to compute the gradients all the gradients for the hidden units and the memory cell, we need to 
+	\begin{itemize}
+		\item[(1)] calculate gradients for $\bm{i}_{t+1}$, $\bm{f}_{t+1}$, $\bm{e}_{t+1}$, and $\tilde{\bm{c}}_{t+1}$,
+		\item[(2)] calculate the gradient for $\bm{h}_{t}$ using $\bm{h}_{t+1}$ and (1), and
+		\item[(3)] calculate the gradient for $\bm{c}_{t}$ using (2) and $\bm{c}_{t+1}$.
+		\item[(4)] calculate the gradients for $\bm{i}_{t}$, $\bm{f}_{t}$, $\bm{e}_{t}$, and $\tilde{\bm{c}}_{t}$ using (2) and (3).
+	\end{itemize}
 
 \subsubsection*{III - gradients for gates and memory cell}
-	Further, for notational convenience, we set 
-	$$ \tilde{\bm{g}}_t := \bm{g_t} \frac{\partial \bm{o}_t}{\partial \bm{h}_t}$$
+	Further, for notational convenience, we define
+	$$ \tilde{\bm{g}}_t := \frac{\partial L}{\partial \bm{h}_t}, \quad\text{and}\quad \hat{\bm{g}}_t := \frac{\partial L}{\partial \bm{c}_t}$$
 	such that we can expand the terms in the above equation per the follwing:
 	\begin{align*}
-		\frac{\partial L}{\partial \bm{i}_{t}} &= \tilde{\bm{g}}_t\,\bm{e}_t (1 - \tanh^2(\bm{c}_t)) \tilde{\bm{c}}_t\\ %\frac{\partial \bm{a}_{i, t}}{\partial \bm{h}_{t-1}} \\
-		\frac{\partial L}{\partial \bm{f}_{t}} &= \tilde{\bm{g}}_t\,\bm{e}_t (1 - \tanh^2(\bm{c}_t)) \bm{c}_{t-1}\\ %\frac{\partial \bm{a}_{f, t}}{\partial \bm{h}_{t-1}}  \\
-		\frac{\partial L}{\partial \bm{e}_{t}} &=\tilde{\bm{g}}_t\,  \tanh(\bm{c}_t)\\ %\frac{\partial \bm{a}_{e, t}}{\partial \bm{h}_{t-1}}\\
-		\frac{\partial L}{\partial \tilde{\bm{c}}_{t}} &= \tilde{\bm{g}}_t\, \bm{e}_t (1 - \tanh^2(\bm{c}_t)) \bm{i}_t %(1 - \tanh^2(\bm{a}_{c, t}) %\frac{\partial \bm{a}_{c, t}}{\partial \bm{h}_{t-1}}\\
+		\frac{\partial L}{\partial \bm{i}_{t}}\frac{\partial \bm{i}_{t}}{\partial \bm{h}_{t-1}} &= \hat{\bm{g}}_t\,\tilde{\bm{c}}_t \sigma(\bm{a}_{i, t})(1 - \sigma(\bm{a}_{i, t}))W_i = \hat{\bm{g}}_t\,\tilde{\bm{c}}_t \bm{i}_t (1 - \bm{i}_t) W_i\\
+		\frac{\partial L}{\partial \bm{f}_{t}}\frac{\partial \bm{f}_{t}}{\partial \bm{h}_{t-1}} &= \hat{\bm{g}}_t\,\bm{c}_{t-1} \sigma(\bm{a}_{f, t})(1 - \sigma(\bm{a}_{f, t}))W_f = \hat{\bm{g}}_t\,\bm{c}_{t-1} \bm{f}_t (1 - \bm{f}_t) W_f\\ 
+		\frac{\partial L}{\partial \bm{e}_{t}}\frac{\partial \bm{e}_{t}}{\partial \bm{h}_{t-1}} &=\tilde{\bm{g}}_t\,  \tanh(\bm{c}_t)\sigma(\bm{a}_{e, t})(1 - \sigma(\bm{a}_{e, t}))W_e = \tilde{\bm{g}}_t\,  \tanh(\bm{c}_t)\bm{e}_t(1 - \bm{e}_t)W_e\\ 
+		\frac{\partial L}{\partial \tilde{\bm{c}}_{t}}\frac{\partial \tilde{\bm{c}}_{t}}{\partial \bm{h}_{t-1}} &= \hat{\bm{g}}_t\, \bm{i}_t (1 - \tanh^2(\bm{a}_{c, t}))W_c =  \hat{\bm{g}}_t\, \bm{i}_t (1 - \tilde{\bm{c}}_t^2)W_c
 	\end{align*}
-
-\subsubsection*{IV - gradients for activations}
-	In order to properly compute the gradients, we also need to consider the gradients with respect to the activations. Thus, we have that
-	\begin{align*}
-		\frac{\partial \bm{i}_{t}}{\partial \bm{a}_{i, t}} &= \sigma(\bm{a}_{i, t})(1 - \sigma(\bm{a}_{i, t}))\\
-		\frac{\partial \bm{f}_{t}}{\partial \bm{a}_{f, t}} &= \sigma(\bm{a}_{f, t})(1 - \sigma(\bm{a}_{f, t}))\\
-		\frac{\partial \bm{e}_{t}}{\partial \bm{a}_{e, t}} &= \sigma(\bm{a}_{e, t})(1 - \sigma(\bm{a}_{e, t}))\\
-		\frac{\partial \tilde{\bm{c}}_{t}}{\partial \bm{a}_{c, t}} &= 1 - \tanh^2(\bm{a}_{c, t})
-	\end{align*}
+%
+%\subsubsection*{IV - gradients for activations}
+%	In order to properly compute the gradients, we also need to consider the gradients with respect to the activations. Thus, we have that
+%	\begin{align*}
+%		\frac{\partial \bm{i}_{t}}{\partial \bm{a}_{i, t}} &= \sigma(\bm{a}_{i, t})(1 - \sigma(\bm{a}_{i, t}))\\
+%		\frac{\partial \bm{f}_{t}}{\partial \bm{a}_{f, t}} &= \sigma(\bm{a}_{f, t})(1 - \sigma(\bm{a}_{f, t}))\\
+%		\frac{\partial \bm{e}_{t}}{\partial \bm{a}_{e, t}} &= \sigma(\bm{a}_{e, t})(1 - \sigma(\bm{a}_{e, t}))\\
+%		\frac{\partial \tilde{\bm{c}}_{t}}{\partial \bm{a}_{c, t}} &= 1 - \tanh^2(\bm{a}_{c, t})
+%	\end{align*}
 
 \subsubsection*{V - putting it all together}
 	Finally, given that we have iteratively computed all the gradients for the hidden units, the gates, the memory cell and their respective activations, we have that
 	\begin{align}
-		 \frac{\partial L}{\partial W_i} &= \sum_{t=1}^T \tilde{\bm{g}}_t\, \bm{e}_t (1 - \tanh^2(\bm{c}_t)) \tilde{\bm{c}}_t \sigma(\bm{a}_{i, t})(1 - \sigma(\bm{a}_{i, t})) \bm{h}_{t-1} \\
-		 \frac{\partial L}{\partial U_i} &= \sum_{t=1}^T \tilde{\bm{g}}_t\, \bm{e}_t (1 - \tanh^2(\bm{c}_t)) \tilde{\bm{c}}_t \sigma(\bm{a}_{i, t})(1 - \sigma(\bm{a}_{i, t})) \bm{x}_{t} \\
-		\frac{\partial L}{\partial W_f} &= \sum_{t=1}^T \tilde{\bm{g}}_t\,\bm{e}_t (1 - \tanh^2(\bm{c}_t)) \bm{c}_{t-1} \sigma(\bm{a}_{f, t})(1 - \sigma(\bm{a}_{f, t})) \bm{h}_{t-1} \\ 
-		\frac{\partial L}{\partial U_f} &= \sum_{t=1}^T \tilde{\bm{g}}_t\,\bm{e}_t (1 - \tanh^2(\bm{c}_t)) \bm{c}_{t-1} \sigma(\bm{a}_{f, t})(1 - \sigma(\bm{a}_{f, t})) \bm{x}_{t} \\ 
-		\frac{\partial L}{\partial W_e} &= \sum_{t=1}^T \tilde{\bm{g}}_t\,  \tanh(\bm{c}_t) \sigma(\bm{a}_{e, t})(1 - \sigma(\bm{a}_{e, t})) \bm{h}_{t-1} \\
-		\frac{\partial L}{\partial U_e} &= \sum_{t=1}^T \tilde{\bm{g}}_t\,  \tanh(\bm{c}_t) \sigma(\bm{a}_{e, t})(1 - \sigma(\bm{a}_{e, t})) \bm{x}_{t} \\
-		\frac{\partial L}{\partial W_c} &= \sum_{t=1}^T \tilde{\bm{g}}_t\, \bm{e}_t (1 - \tanh^2(\bm{c}_t)) \bm{i}_t (1 - \tanh^2(\bm{a}_{c, t})) \bm{h}_{t-1} \\
-		\frac{\partial L}{\partial U_c} &= \sum_{t=1}^T \tilde{\bm{g}}_t\, \bm{e}_t (1 - \tanh^2(\bm{c}_t)) \bm{i}_t (1 - \tanh^2(\bm{a}_{c, t})) \bm{x}_{t} \\
+		 \frac{\partial L}{\partial W_i} &= \sum_{t=1}^T \hat{\bm{g}}_t\,\tilde{\bm{c}}_t \bm{i}_t (1 - \bm{i}_t) \bm{h}_{t-1} \\
+		 \frac{\partial L}{\partial U_i} &= \sum_{t=1}^T \hat{\bm{g}}_t\,\tilde{\bm{c}}_t \bm{i}_t (1 - \bm{i}_t) \bm{x}_{t} \\
+		\frac{\partial L}{\partial W_f} &= \sum_{t=1}^T \hat{\bm{g}}_t\,\bm{c}_{t-1} \bm{f}_t (1 - \bm{f}_t) \bm{h}_{t-1} \\ 
+		\frac{\partial L}{\partial U_f} &= \sum_{t=1}^T \hat{\bm{g}}_t\,\bm{c}_{t-1} \bm{f}_t (1 - \bm{f}_t) \bm{x}_{t} \\ 
+		\frac{\partial L}{\partial W_e} &= \sum_{t=1}^T \tilde{\bm{g}}_t\,  \tanh(\bm{c}_t)\bm{e}_t(1 - \bm{e}_t)\bm{h}_{t-1} \\
+		\frac{\partial L}{\partial U_e} &= \sum_{t=1}^T \tilde{\bm{g}}_t\,  \tanh(\bm{c}_t)\bm{e}_t(1 - \bm{e}_t) \bm{x}_{t} \\
+		\frac{\partial L}{\partial W_c} &= \sum_{t=1}^T \hat{\bm{g}}_t\, \bm{i}_t (1 - \tilde{\bm{c}}_t^2) \bm{h}_{t-1} \\
+		\frac{\partial L}{\partial U_c} &= \sum_{t=1}^T \hat{\bm{g}}_t\, \bm{i}_t (1 - \tilde{\bm{c}}_t^2) \bm{x}_{t} \\
 		\frac{\partial L}{\partial V} &= \sum_{t=1}^T \bm{g}_t\bm{h}_t
 	\end{align}
 
